--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
 .p-2{ padding: 4px;}
 span{ margin-right: 20px;}
 a {color: grey;}
+.border {border: 1px solid rgb(102, 102, 102);}
 
 /*-----------------------------*/
 
@@ -37,7 +38,6 @@ aside > div{
 }
 
 aside form, aside .model-container{
-    border: 1px solid rgb(0, 0, 0);
     background: white;
 }
 
@@ -56,9 +56,7 @@ aside form, aside .model-container{
     max-height: 100%;
 }
 
-.box{
-    height: 400px;
-}
+.box{ height: 40px; /* ?????? */ }
 
 
 .model{
