--- a/index.css
+++ b/index.css
@@ -56,14 +56,21 @@ aside form, aside .model-container{
     max-height: 100%;
 }
 
-.box{ height: 40px; /* ?????? */ }
+.box{ height: 40px; /* minimum height */ }
 
 
 .model{
     background: white;
     flex: 1;
-    margin: 2px;
-    height: 110px;
+    margin: 4px;
     border: 1px solid black;
 }
+
+.model > p {
+    padding: 10px;
+    cursor: pointer;
+}
+
+
+
 
