--- a/index.css
+++ b/index.css
@@ -15,6 +15,28 @@ a {color: grey;}
 .border {border: 1px solid rgb(102, 102, 102);}
 
 /*-----------------------------*/
+/* -- loading screen --- */
+
+#loading_sceen{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+
+    display: table;
+    text-align: center;
+    font-size: 300%;
+}
+
+#loading_sceen > div{
+    display: table-cell;
+    vertical-align: middle;
+}
+
+
+
+/*-----------------------------*/
+/* --- general --- */
 
 section{
     flex: 0 250px;
@@ -42,7 +64,6 @@ aside form, aside .model-container{
 }
 
 
-
 #renderer{
     background-color: grey;
     height: 100%;
@@ -50,7 +71,7 @@ aside form, aside .model-container{
 }
 
 /*-----------------------*/
-
+/* --- sidebar --- */
 .content{
     overflow-y: scroll;
     max-height: 100%;
